<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_select_from_products"
        android:icon="@drawable/ic_list_white_24dp"
        android:title="@string/action_select_from_products"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_shop"
        android:icon="@drawable/ic_store_mall_directory_white_24dp"
        android:title="@string/action_shop"
        app:showAsAction="always">

        <menu>
            <group
                android:id="@+id/action_shop_group"
                android:checkableBehavior="single">

            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_show_sales"
        android:checkable="true"
        android:checked="true"
        android:title="@string/action_show_sales"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_remove_buyed"
        android:title="@string/action_remove_buyed"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_change"
        android:title="@string/action_change_list"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_remove"
        android:title="@string/action_remove_list"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_send"
        android:title="@string/action_send_list"
        app:showAsAction="never"/>

    <!--<item
        android:id="@+id/action_alarm"
        app:showAsAction="never"
        android:title="@string/action_alarm"/>-->

</menu>
