<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_change"
        app:showAsAction="always"
        android:icon="@drawable/ic_create_black_24dp"
        android:title="@string/action_change"/>

    <item
        android:id="@+id/action_remove"
        app:showAsAction="always"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/action_remove"/>

    <item
        android:id="@+id/action_send"
        app:showAsAction="always"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/action_send"/>

    <!--<item
        android:id="@+id/action_alarm"
        app:showAsAction="always"
        android:icon="@drawable/ic_alarm_black_24dp"
        android:title="@string/action_alarm"/>-->

</menu>
