<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingTop="16dp">

    <LinearLayout
        android:id="@+id/comment_top_stroke"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_list_items_with_input_layout"
        android:paddingRight="@dimen/padding_list_items_with_input_layout"
        android:visibility="gone">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/comment_author_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/comment_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_comment_author"
                android:maxLines="1"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/comment_save_author"
            style="@style/RaisedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/button_save_author"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_list_items_with_input_layout"
        android:paddingRight="@dimen/padding_list_items">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/comment_text_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/comment_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_comment_text"
                android:maxLines="4"/>
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/comment_send"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_send_white_24dp"
            android:scaleType="center"/>
    </LinearLayout>

</LinearLayout>