<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_50">

    <FrameLayout
        android:id="@+id/activity_document_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:clipToPadding="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingTop="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:orientation="horizontal"
                        android:minHeight="56dp"
                        >

                        <ImageView
                            android:id="@+id/listitem_count_minus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/background_button"
                            android:padding="16dp"
                            android:src="@drawable/ic_remove_grey600_24dp"/>

                        <EditText
                            android:id="@+id/listitem_count"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:hint="@string/hint_listitem_count"
                            android:inputType="numberDecimal"
                            android:minHeight="48dp"
                            android:layout_gravity="bottom"/>

                        <ImageView
                            android:id="@+id/listitem_count_plus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/background_button"
                            android:padding="16dp"
                            android:src="@drawable/ic_add_grey600_24dp"/>
                    </LinearLayout>

                    <Spinner
                        android:id="@+id/listitem_unit"
                        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="16dp"
                        android:layout_weight="2"
                        android:minHeight="48dp"
                        android:layout_gravity="bottom"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:minHeight="56dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/listitem_coast_layout"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <EditText
                                android:id="@+id/listitem_coast"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="numberDecimal"/>
                        </android.support.design.widget.TextInputLayout>

                        <TextView
                            android:id="@+id/listitem_currency"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:text="RUB"/>
                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/listitem_important"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/checkbox_listitem_important"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_marginTop="8dp">

                    <TextView
                        style="@style/InputDescText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_listitem_shop"
                        android:layout_marginLeft="4dp"/>

                    <Spinner
                        android:id="@+id/listitem_shop"
                        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_marginTop="8dp">

                    <TextView
                        style="@style/InputDescText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_listitem_category"
                        android:layout_marginLeft="4dp"/>

                    <Spinner
                        android:id="@+id/listitem_category"
                        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"/>

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:id="@+id/listitem_comment_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:hint="@string/hint_listitem_comment"
                        android:id="@+id/listitem_comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbar"
        android:src="@drawable/shadow_top"
        android:visibility="@integer/visibility_toolbar_show_image"/>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="28dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <android.support.design.widget.TextInputLayout
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:id="@+id/listitem_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/listitem_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_listitem_name"
                android:maxLines="1"
                android:textSize="24sp"/>
        </android.support.design.widget.TextInputLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/appbar"
        android:layout_marginRight="16dp"
        android:layout_marginTop="-28dp"
        android:src="@drawable/ic_check_white_24dp"/>
</RelativeLayout>